js/src/tests/test262/built-ins/Error/prototype/toString/tostring-get-throws.js
assert
.
throws
(
Test262Error
function
(
)
{
Error
.
prototype
.
toString
.
call
(
{
get
name
(
)
{
throw
new
Test262Error
;
}
}
)
;
}
"
name
field
getter
should
throw
to
cover
abrupt
completion
return
case
in
step
3
"
)
assert
.
throws
(
Test262Error
function
(
)
{
Error
.
prototype
.
toString
.
call
(
{
get
message
(
)
{
throw
new
Test262Error
;
}
}
)
;
}
"
message
field
getter
should
throw
to
cover
abrupt
completion
return
case
in
step
5
"
)
reportCompare
(
0
0
)
;
